[project]
name = "litreview-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.43.0",
    "httpx>=0.28.1",
    "instructor>=1.7.2",
    "mdutils>=1.6.0",
    "miniperscache>=0.1.2",
    "pyalex>=0.15.1",
    "pydantic>=2.10.5",
    "pypandoc-binary>=1.15",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "scrape-google-scholar-py>=0.3.4",
    "serpapi>=0.1.5",
    "tqdm>=4.67.1",
    "typed-argparse>=0.3.1",
]
